--- a/Edportal/wwwroot/css/pages/home.css
+++ b/Edportal/wwwroot/css/pages/home.css
@@ -111,7 +111,7 @@ body {
     --padding-col : 0 1.5rem;
 }*/
 .footer {
-  background: linear-gradient(180deg, #565759 0%, #323334 100%);
+  background: #161616;
   padding: 3.2rem 0 2rem;
   position: relative;
   margin-top: auto;
@@ -122,51 +122,70 @@ body {
   }
 }
 .footer .container {
-  max-width: 113.2rem;
+  max-width: 120rem;
 }
 @media (max-width: 767px) {
   .footer .container {
     padding: 0;
   }
 }
-.footer-item {
+.footer .footer-item {
   display: flex;
   justify-content: space-between;
 }
 @media (max-width: 767px) {
-  .footer-item {
+  .footer .footer-item {
     display: none;
   }
 }
-.footer-item-block {
+.footer .footer-item .footer-item-first-block {
+  width: 30%;
+}
+.footer .footer-item .footer-item-second-block {
+  width: 10%;
+}
+.footer .footer-item .footer-item-third-block {
+  width: 30%;
+}
+.footer .footer-item .heading-footer-list {
+  margin-bottom: 2.4rem;
+}
+.footer .footer-item .heading-footer-list a {
+  font-size: 1.8rem;
+  font-weight: 500px;
+  text-decoration: none;
+  color: #6D6D6D;
+  line-height: 2.4rem;
+}
+.footer .footer-item .footer-item-block {
   margin-bottom: 1.2rem;
   border-right: 1px solid #676767;
   width: 18rem;
 }
-.footer-item-block:last-child {
+.footer .footer-item .footer-item-block:last-child {
   border-right: none;
 }
 @media (max-width: 767px) {
-  .footer-item-block {
+  .footer .footer-item .footer-item-block {
     border-right: none;
     border-bottom: 1px solid #676767;
     padding-bottom: 1.2rem;
   }
 }
-.footer-item-block .heading-footer-list {
+.footer .footer-item .footer-item-block .heading-footer-list {
   line-height: 1;
   margin-bottom: 1rem;
   width: 13rem;
 }
-.footer-item-block .heading-footer-list:last-child {
+.footer .footer-item .footer-item-block .heading-footer-list:last-child {
   margin-bottom: 0;
 }
 @media (max-width: 767px) {
-  .footer-item-block .heading-footer-list:last-child {
+  .footer .footer-item .footer-item-block .heading-footer-list:last-child {
     margin-bottom: 1rem;
   }
 }
-.footer-item-block .heading-footer-list a {
+.footer .footer-item .footer-item-block .heading-footer-list a {
   text-decoration: none;
   color: #fff;
   font-weight: 700;
@@ -174,15 +193,15 @@ body {
   line-height: 1.8rem;
   text-transform: uppercase;
 }
-.footer-item-block ul {
+.footer .footer-item .footer-item-block ul {
   list-style: none;
   padding-left: 0;
   margin-top: 1.2rem;
 }
-.footer-item-block ul li {
+.footer .footer-item .footer-item-block ul li {
   margin-bottom: 1rem;
 }
-.footer-item-block ul li a {
+.footer .footer-item .footer-item-block ul li a {
   text-decoration: none;
   color: #fff;
   font-weight: 400;
@@ -190,14 +209,14 @@ body {
   line-height: 1.8rem;
 }
 @media (max-width: 767px) {
-  .footer-item-block:last-child {
+  .footer .footer-item .footer-item-block:last-child {
     padding-bottom: 0;
   }
 }
-.footer-item:last-child {
+.footer .footer-item:last-child {
   border-right: none;
 }
-.footer-item:last-child .footer-item-block:last-child {
+.footer .footer-item:last-child .footer-item-block:last-child {
   border-bottom: none;
 }
 .footer .footer-logo {
@@ -221,11 +240,10 @@ body {
   display: block;
 }
 .footer .text-follow {
-  font-weight: 400;
-  font-size: 1.4rem;
-  color: #fff;
-  margin-bottom: 1.2rem;
-  white-space: nowrap;
+  font-weight: 600;
+  font-size: 1.8rem;
+  color: #6D6D6D;
+  margin-bottom: 2.4rem;
 }
 @media (max-width: 767px) {
   .footer .text-follow {
@@ -233,6 +251,12 @@ body {
     margin-bottom: 1rem;
     border-top: 1px solid #676767;
   }
+}
+.footer .contact p {
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  color: #505050;
 }
 .footer .follow {
   display: inline-flex;
@@ -256,8 +280,8 @@ body {
   align-items: flex-start;
   color: #fff;
   padding-top: 2rem;
-  margin-top: 2rem;
-  border-top: 1px solid #676767;
+  margin-top: 4rem;
+  border-top: 1px dashed #676767;
 }
 @media screen and (max-width: 1024px) {
   .footer .footer-info {
@@ -271,51 +295,13 @@ body {
     border-top: none;
   }
 }
-.footer .footer-info .footer-info-main ul {
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-  margin-bottom: 1.6rem;
-}
-@media screen and (max-width: 1024px) {
-  .footer .footer-info .footer-info-main ul {
-    flex-wrap: wrap;
-    margin-bottom: 1.2rem;
-  }
-}
-.footer .footer-info .footer-info-main ul li {
-  padding-right: 1rem;
-  margin-right: 1rem;
-  border-right: 1px solid #676767;
-}
-@media screen and (max-width: 1024px) {
-  .footer .footer-info .footer-info-main ul li {
-    padding-right: 0.3rem;
-    margin-right: 0.3rem;
-  }
-}
-.footer .footer-info .footer-info-main ul li:last-child {
-  padding-right: 0;
-  border-right: 0;
-  margin-right: 0;
-}
-.footer .footer-info .footer-info-main ul li a {
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 1.4rem;
-  line-height: 1.9rem;
-  color: #fff;
-}
-@media (max-width: 767px) {
-  .footer .footer-info .footer-info-main ul li a {
-    font-size: 1.3rem;
-  }
+.footer .footer-info .footer-info-main {
+  width: 100%;
 }
 .footer .footer-info .footer-info-main .copy-right {
-  display: flex;
   align-items: center;
   font-weight: 400;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 2.4rem;
 }
 @media (max-width: 767px) {
@@ -325,9 +311,13 @@ body {
   }
 }
 .footer .footer-info .footer-info-main .copy-right .copy-right-info {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
   margin-right: 2.4rem;
-  display: flex;
   align-items: center;
+  color: #6D6D6D;
 }
 @media (max-width: 767px) {
   .footer .footer-info .footer-info-main .copy-right .copy-right-info {
@@ -1611,7 +1601,7 @@ textarea::-ms-input-placeholder, input[type]:not([type=number]):not([type=button
 }
 @media (min-width: 1400px) {
   .menu-popup .group-column-popup {
-    max-width: 130rem;
+    max-width: 120rem;
   }
 }
 .menu-popup-header {
@@ -2173,6 +2163,171 @@ textarea::-ms-input-placeholder, input[type]:not([type=number]):not([type=button
   cursor: context-menu;
 }
 
+.card-vertical {
+  padding-bottom: 1.6rem;
+}
+.card-vertical.card-vertical-highlight [class*=card-vertical__]:not(.card-vertical__image) {
+  padding: 0 1.6rem;
+}
+@media (max-width: 767px) {
+  .card-vertical.card-vertical-highlight [class*=card-vertical__]:not(.card-vertical__image) {
+    padding: 0 0.8rem;
+  }
+}
+.card-vertical__image {
+  margin-bottom: 0.8rem;
+  overflow: hidden;
+  display: block;
+  position: relative;
+  height: 15rem;
+}
+@media screen and (max-width: 1024px) {
+  .card-vertical__image {
+    margin-bottom: 0.5rem;
+    height: 11rem;
+  }
+}
+.card-vertical__title {
+  color: #222;
+  font-weight: bold;
+  font-size: 1.6rem;
+  letter-spacing: -0.02rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  display: initial;
+  line-height: 2rem;
+}
+.card-vertical__title:hover {
+  color: #EB5342;
+}
+.card-vertical__datetime {
+  font-size: 1.2rem;
+  color: #828282;
+}
+@media screen and (max-width: 1024px) {
+  .card-vertical__datetime {
+    font-size: 1.2rem;
+  }
+}
+.card-vertical__description {
+  margin: 0.3rem 0;
+  line-height: 1.9rem;
+  font-weight: 500;
+}
+@media screen and (max-width: 1024px) {
+  .card-vertical__description {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+}
+
+.comment {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 1rem;
+  vertical-align: middle;
+  text-decoration: none !important;
+}
+.comment .icon-mode_comment_full {
+  font-size: 1.6rem;
+}
+.comment .number {
+  color: #2B89CC;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.3rem;
+  margin-left: 0.3rem;
+}
+
+.box-vertical-image {
+  display: block;
+}
+.box-vertical-content {
+  margin-top: 1.2rem;
+}
+@media (max-width: 767px) {
+  .box-vertical-content {
+    margin-top: 1rem;
+  }
+}
+.box-vertical-content h1, .box-vertical-content .heading-hight-light {
+  font-weight: 600;
+  font-size: 2.4rem;
+  line-height: 3.2rem;
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .box-vertical-content h1, .box-vertical-content .heading-hight-light {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+}
+.box-vertical-content h3, .box-vertical-content h2 {
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+}
+.box-vertical-content h4 {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 3rem;
+}
+.box-vertical-content a {
+  text-decoration: none;
+  color: #222;
+  transition: color 0.3s ease;
+}
+.box-vertical-content a:hover {
+  color: #eb5342;
+}
+.box-vertical-content p {
+  margin-top: 0.8rem;
+  margin-bottom: 0;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #222;
+  line-height: 2.4rem;
+}
+@media (max-width: 767px) {
+  .box-vertical-content p {
+    font-size: 1.3rem;
+    line-height: 1.5Rrem;
+  }
+}
+.box-vertical-content .heading-box-content {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.2rem;
+}
+@media (max-width: 767px) {
+  .box-vertical-content .heading-box-content {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+  }
+}
+.box-vertical.box-vertical-hightlight .box-vertical-image {
+  height: 35rem;
+}
+@media (max-width: 767px) {
+  .box-vertical.box-vertical-hightlight .box-vertical-image {
+    height: 23rem;
+    margin-left: -1.2rem;
+    margin-right: -1.2rem;
+    border-radius: 0;
+  }
+}
+.box-vertical.box-vertical-hightlight .box-vertical-content {
+  margin-top: 1.6rem;
+}
+@media (max-width: 767px) {
+  .box-vertical.box-vertical-hightlight .box-vertical-content {
+    margin-top: 1rem;
+  }
+}
+.box-vertical .box-video {
+  position: relative;
+}
+
 .discipline {
   box-sizing: border-box;
   display: flex;
@@ -2212,4 +2367,55 @@ textarea::-ms-input-placeholder, input[type]:not([type=number]):not([type=button
   display: block;
   font-size: 2.5em;
   padding: 0.5em;
+}
+
+.block-artile {
+  display: grid;
+  grid-template-rows: unset;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2.4rem;
+  grid-column: 1/4;
+}
+
+.block-social-article {
+  display: grid;
+  grid-template-rows: unset;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 2.4rem;
+  grid-column: 1/4;
+}
+
+.block-interest .block_title {
+  margin-bottom: 2.4rem;
+}
+
+.block-paging {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 2rem;
+}
+.block-paging .paging {
+  display: flex;
+}
+.block-paging .paging .page {
+  border: none;
+  box-sizing: border-box;
+  color: #9ca0ac;
+  cursor: pointer;
+  display: flex;
+  float: none;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 2.4rem;
+  margin: 10px;
+  padding: 10px;
+  width: 44px;
+  height: 44px;
+}
+.block-paging .paging .page.active {
+  background-color: #247BA0;
+  color: #ffffff;
 }
