--- a/Edportal/Views/Home/Index.cshtml
+++ b/Edportal/Views/Home/Index.cshtml
@@ -197,8 +197,103 @@
             </ul>
          </div>
 
-         <div class="block">
+
+         <div class="block block-interest">
+            <div class="block_title">Edportal trên social media</div>
+            <div class="block-social-article">
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                    </div>
+                </div>
+            </div>
+            <div class="block-paging">
+                <ul class="paging" data-current="1">
+                    <li class="page active" data-page="1">1</li>
+                    <li class="page" data-page="2">2</li>
+                    <li class="page" data-page="3">3</li>
+                    <li class="page" data-page="2">></li>
+                    <li class="page" data-page="10">>></li>
+                </ul>
+            </div>
+         </div>
+
+        <div class="block block-interest">
             <div class="block_title">Bài viết thú vị</div>
+            <div class="block-artile">
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                        <h4 class="heading-box-content">
+                            <a href="#">Man United muốn đưa Xavi về thay Ten Hag</a>
+                            <p>Hãy cùng điểm qua danh sách 11 cầu thủ ghi điểm nhiều nhất FPL tính đến nay của mùa giải 2024/25 theo đội hình 3-5-2.</p>
+                        </h4>
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                        <h4 class="heading-box-content">
+                            <a href="#">Man United muốn đưa Xavi về thay Ten Hag</a>
+                            <p>Hãy cùng điểm qua danh sách 11 cầu thủ ghi điểm nhiều nhất FPL tính đến nay của mùa giải 2024/25 theo đội hình 3-5-2.</p>
+                        </h4>
+                    </div>
+                </div>
+                <div class="box-vertical">
+                    <a href="#">
+                        <img src="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg" data-original="https://cdn.sabavn.net/2024/10/man-united-muon-xavi-thay-ten-hag.jpg"  class="img-res lazy" style="" />
+                    </a>
+                    <div class="box-vertical-content">
+                        <h4 class="heading-box-content">
+                            <a href="#">Man United muốn đưa Xavi về thay Ten Hag</a>
+                            <p>Hãy cùng điểm qua danh sách 11 cầu thủ ghi điểm nhiều nhất FPL tính đến nay của mùa giải 2024/25 theo đội hình 3-5-2.</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="block-paging">
+                <ul class="paging paging-interest" data-current="1">
+                    <li class="page active" data-page="1">1</li>
+                    <li class="page" data-page="2">2</li>
+                    <li class="page" data-page="3">3</li>
+                    <li class="page" data-page="2">></li>
+                    <li class="page" data-page="10">>></li>
+                </ul>
+            </div>
          </div>
     </div>
 </section
