--- a/Edportal/Views/Shared/Components/Footer/Default.cshtml
+++ b/Edportal/Views/Shared/Components/Footer/Default.cshtml
@@ -1,41 +1,31 @@
 <section class="footer">
     <div class="container">
         <div class="footer-item">
-            <div class="footer-item-block">
-                <div class="heading-footer-list"><a href="">Trang Chủ</a></div>
-                <div class="heading-footer-list"><a href="/tin-the-thao-sabavn">Tin mới nhất</a></div>
-                <div class="heading-footer-list"><a href="/nhan-dinh-bong-da-sabavn">Nhận định</a></div>
-                <div class="heading-footer-list"><a href="/hau-truong-sabavn">Hậu trường</a></div>
-                <div class="heading-footer-list"><a href="/chuyen-nhuong-sabavn">Chuyển nhượng</a></div>
-                <div class="heading-footer-list"><a href="/video-sabavn">Video</a></div>
-            </div>
-            <div class="footer-item-block">
-                <div class="heading-footer-list"><a href="/tag/lich-thi-dau-hom-nay">LTĐ hôm nay</a></div>
-                <div class="heading-footer-list"><a href="/lich-thi-dau/bong-da/truc-tiep">Trực tiếp</a></div>
-                <div class="heading-footer-list"><a href="/tag/ket-qua-bong-da-hom-nay">Kết quả</a></div>
-                <div class="heading-footer-list"><a href="/tag/diem-tin-bong-da-hom-nay">Tin nóng</a></div>
-            </div>
-            <div class="footer-item-block">
-                <div class="heading-footer-list"><a href="/bong-da-viet-nam-sabavn">Bóng đá VN</a></div>
-                <div class="heading-footer-list"><a href="/bong-da-anh-sabavn">Bóng đá Anh</a></div>
-                <div class="heading-footer-list"><a href="/bong-da-tbn-sabavn">Bóng đá TBN</a></div>
-                <div class="heading-footer-list"><a href="/bong-da-italia-sabavn">Bóng đá Ý</a></div>
-                <div class="heading-footer-list"><a href="/bong-da-duc-sabavn">Bóng đá Đức</a></div>
-                <div class="heading-footer-list"><a href="/bong-da-phap-sabavn">Bóng đá Pháp</a></div>
-            </div>
-            <div class="footer-item-block">
-                <div class="heading-footer-list"><a href="/giai-dau-cap-clb-sabavn">Giải đấu cấp CLB</a></div>
-                <div class="heading-footer-list"><a href="/doi-tuyen-sabavn">Đội tuyển</a></div>
-                <div class="heading-footer-list"><a href="/khu-vuc-sabavn">Bóng đá khu vực</a></div>
-                <div class="heading-footer-list"><a href="/the-thao-sabavn">Thể thao</a></div>
-            </div>
-            <div class="footer-item-block show-pc">
-                <div class="footer-logo">
+            <div class="footer-item-first-block">
+                <div class="logo">
                     <a href="/">
-                    <img src="/images/logo-footer.png?v=UW15WzZev4l2ICHBBG7OJeEAifrwUULqzpG0ZyQoLlU" alt="logo" class="img-res" width="88" height="46" loading="lazy">
+                        <img src="~/images/logo.png" alt="logo" >
                     </a>
                 </div>
-                <p class="text-follow">Theo dõi SABA Sports trên</p>
+            </div>
+            <div class="footer-item-second-block">
+                <div class="heading-footer-list"><a href="/tag/lich-thi-dau-hom-nay">Sitemap</a></div>
+                <div class="heading-footer-list"><a href="/lich-thi-dau/bong-da/truc-tiep">About us</a></div>
+                <div class="heading-footer-list"><a href="/tag/ket-qua-bong-da-hom-nay">Story</a></div>
+                <div class="heading-footer-list"><a href="/tag/diem-tin-bong-da-hom-nay">Career</a></div>
+            </div>
+            <div class="footer-item-third-block">
+                <div class="heading-footer-list"><a href="/tag/diem-tin-bong-da-hom-nay">  </a></div>
+                <div class="heading-footer-list"><a href="/tag/lich-thi-dau-hom-nay">Mission</a></div>
+                <div class="heading-footer-list"><a href="/lich-thi-dau/bong-da/truc-tiep">Blog</a></div>
+                <div class="heading-footer-list"><a href="/tag/ket-qua-bong-da-hom-nay">Partnership</a></div>
+            </div>
+            <div class="footer-item-block show-pc">
+                <p class="text-follow">Get in touch</p>
+                <div class="contact">
+                    <p>+9198323 000000</p>
+                    <p>info@Ebooks.com</p>
+                </div>
                 <div class="follow">
                     <a class="icon-social-facebook" href="https://www.facebook.com/sabasportsvietnam"></a>
                     <a class="icon-social-youtube" href="https://www.youtube.com/SABASportsVietnam"></a>
@@ -53,21 +43,9 @@
             </div>
 
             <div class="footer-info-main">
-                <ul class="footer-list-service">
-                    <li><a data-section="#thu-thap" href="/policy/#thu-thap">Thu thập và sử dụng thông tin</a></li>
-                    <li><a data-section="#luu-tru" href="/policy/#luu-tru">Lưu trữ thông tin cá nhân</a></li>
-                    <li><a data-section="#cookie" href="/policy/#cookie">Cookie</a></li>
-                    <li><a data-section="#tiet-lo" href="/policy/#tiet-lo">Tiết lộ thông tin cá nhân</a></li>
-                    <li><a data-section="#quang-cao" href="/policy/#quang-cao">Quảng cáo bên thứ ba</a></li>
-                    <li><a data-section="#bao-mat" href="/policy/#bao-mat">Bảo mật và An ninh</a></li>
-                </ul>
                 <div class="copy-right">
                     <div class="copy-right-info">
-                        © 2024 Bản quyền thuộc về SABA Sports
-                        <div class="ex">
-                            <a href="https://www.dmca.com/Protection/Status.aspx?ID=f936b4b7-f675-4399-9627-694869ab0664&amp;refurl=https://www.sabavn.net/" title="DMCA.com Protection Status" class="dmca-badge"> <img width="120" height="21" loading="lazy" src="https://images.dmca.com/Badges/dmca_protected_sml_120b.png?ID=f936b4b7-f675-4399-9627-694869ab0664" alt="DMCA.com Protection Status"></a>
-                            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
-                        </div>
+                        ©Copyright @DateTime.Now.Year, All rights reserved by Ebooks
                     </div>
                 </div>
                 <div class="flow-us show-mb">
