--- a/Edportal/Views/Shared/Components/Header/Default.cshtml
+++ b/Edportal/Views/Shared/Components/Header/Default.cshtml
@@ -9,7 +9,7 @@
 
             <div class="logo">
                 <a href="/">
-                    <img src="/images/sabasports.svg?v=MsKCZsdq7zCHgbxR4C1agDSqvYYO-61WMFuLpYPisPw" alt="SABA Sports, tin bong da, tin the thao, ltd bong da" width="120" height="55">
+                    <img src="/images/logo.png" alt="SABA Sports, tin bong da, tin the thao, ltd bong da" width="120" height="55">
                 </a>
             </div>
             <div class="search-desktop">
