refactor: refactor code

--- a/Edportal/Views/Shared/Components/Footer/Default.cshtml
+++ b/Edportal/Views/Shared/Components/Footer/Default.cshtml
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="footer-item">
             <div class="footer-item-first-block">
-                <div class="logo">
+                <div class="footer-logo">
                     <a href="/">
-                        <img src="~/images/logo.png" alt="logo" >
+                        <img src="~/images/logo.png" alt="logo" width="120" >
                     </a>
                 </div>
             </div>
@@ -36,12 +36,6 @@
 
 
         <div class="footer-info">
-            <div class="footer-logo show-mb">
-                <a href="/">
-                 <img src="/images/logo-footer.png?v=UW15WzZev4l2ICHBBG7OJeEAifrwUULqzpG0ZyQoLlU" alt="logo" class="img-res" width="88" height="46" loading="lazy">
-                </a>
-            </div>
-
             <div class="footer-info-main">
                 <div class="copy-right">
                     <div class="copy-right-info">
